# ExpenseReport

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: category_vocab.py  config.py  db.py  json_utils.py  main.py  models.py  provenance_enums.py  schemas.py
backend/migrations/: 001_f_ai_stage1_backfill_source_tags.py  002_f_ai_stage1_phase8_fatura_attachment.py  _common.py  f_ai_0b1_agent_receipt_review_tables.py  m1_day1_expensereport_schema.py  m1_day25_money_decimal.py  m1_day2_receipt_type.py  m1_day3a_field_provenance.py  m1_match_decision_bucket_columns.py
backend/scripts/: classify_existing_receipts.py  sanity_decimal.py  seed_prod_shape_db.py
backend/tests/: _pivot_helpers.py  conftest.py  smoke_air_travel.py  smoke_meals_entertainment.py  test_agent_receipt_context.py  test_agent_receipt_reviewer.py  test_agentdb.py  test_business_personal_clarification_policy.py  test_category_vocab_consistency.py  test_clarification_non_answer.py  test_clarification_queue_receipt_scope.py  test_date_validator.py  test_db_migration.py  test_decimal_api_boundary.py  test_decimal_json_roundtrip.py  test_expense_report_pivot.py  test_expense_reports_endpoints.py  test_f_ai_stage1_schema.py  test_field_provenance_atomicity.py  test_field_provenance_invariant.py  test_field_provenance_service.py  test_justification_validation.py  test_live_model_smoke_preflight.py  test_live_model_smoke_template_path.py  test_llm_matching.py  test_m1_day1_migration.py  test_m1_day25_migration.py  test_m1_day3a_migration.py  test_manual_statement_entry.py  (+57 more)
(+121 files in other folders)
