[project]
name = "expense-reporting-app"
version = "0.1.0"
description = "Statement-first expense reporting application"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "sqlmodel>=0.0.22",
  "openpyxl>=3.1",
  "pillow>=10.0",
  "python-multipart>=0.0.9",
  "openai>=1.50",
  "pypdfium2>=4.30.0"
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 8080

# Tell setuptools which directories are installable packages.
# Without this, flat-layout auto-discovery picks up both ``app`` and
# ``migrations`` as top-level packages and refuses to build.
# The migrations/ directory contains standalone migration scripts, NOT
# an installable package.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
